Added welcome div

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 			<main>
 				<article class="right">
 					<section>
-						<h1><em>Welcome</em></h1>
-						<p>Paragraph 1</p>
-						<p>Paragraph 2</p>
-						<aside><blockquote><strong>"Quote" </strong><cite>citation for quote</cite></blockquote></aside>
+						<div id="welcome">
+							<h1><em>Header1</em></h1>
+							<p>Paragraph 1</p>
+							<p>Paragraph 2</p>
+							<aside><blockquote><strong>"Quote" </strong><cite>citation for quote</cite></blockquote></aside>
+						</div>
 					</section>
 					<section class="form">
 						<figure><img class="img" src="img/.jpg" alt="Alt text" width="270px" height="270px"/></figure>
